test/pos/NonLinear-pack.msmt_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k1 ((vk12 Int)(vk11 Int)))
(wf $k0 ((vk01 Int)(vk02 Int)))


; Horn Constraints
(constraint (forall ((pig Int)(v1 Int)) (=> (and True (= v1 (+ pig 1))) ($k0 pig v1))))
(constraint (forall ((pig Int)(v2 Int)) (=> (and True (= v2 (+ pig 1))) ($k1 v2 pig))))
(constraint (forall ((argAlice Int)(alice Int)(argBob Int)(bob Int)(v3 Int)) (=> (and (= argAlice 10) (and ($k0 argAlice v) (and (= argBob 20) (and ($k1 v argBob) (= v3 (+ alice bob)))))) (= v3 32))))
