test/neg/NonLinear.msmt_
; Sorts


; Constants




; Uninterpreted Functions


; Qualifiers


; Well-formedness Constraints
(wf $k0 ((lq_karg$vk01##k0 Int)(lq_karg$vk02##k0 Int)))

;  Constraints
(constraint (forall ((_VV##1 Int)(pigOut Int)(pig Int)) (=> (and (= pigOut (+ pig 1)) (= _VV##1 pigOut)) ($k0 pig _VV##1))))
(constraint (forall ((argBob Int)(argAlice Int)(v Int)) (=> (and (= argAlice 10) (and ($k0 argAlice v) (and (= argBob 20) ($k0 argBob v)))) False)))

